--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -68,7 +68,8 @@
 }
 .productDetail .descr section:nth-child(2) .buttonWrap .active:nth-child(1){
     color:white;
-    background-color: #404750
+    background-color: #167af9
+    /* background-color: #404750 */
 }
 .productDetail .descr section:nth-child(2) .buttonWrap .active:nth-child(2){
     color:white;
@@ -83,10 +84,20 @@
 }
 
 .salebtnWrap {
-    /* position: fixed;
-    bottom: 60px;
-    width: 100%;
-    z-index: 10; */
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 10;
+}
+.salebtnWrap div{
+    background-color: white;
+    max-width: 768px;
+    margin: auto;
+    height: 65px;
+    display: flex;
+    border-top: 1px solid #d9d9d9;
+    align-items: center;
 }
 .salebtnWrap button{ 
     width: 44%;
@@ -112,4 +123,13 @@
     top: -2px;
     margin-right: 3px;
     margin-left: 3px;
+}
+.sizeDialog .el-dialog__wrapper{
+    overflow: hidden;
+}
+.sizeDialog .el-dialog {
+    margin-top:40vh !important;
+    width:100% !important;
+    border-radius: 20px;
+    height: 100%;
 }
