사이즈 선택메세지 출력, account페이지 생성

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -93,6 +93,9 @@
     left: 0px;
     right: 0px;
     z-index: 10;
+    max-width: 768px;
+    margin: auto;
+    background-color: white;
 }
 .salebtnWrap div{
     background-color: white;
