search 기능, 페이지 적용, 메인페이지 플러스 버튼 추가

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -84,3 +84,14 @@
     border-color:  #167af9;
     color : white
 }
+
+
+.plusBtnWrap {
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    left: 0;
+    max-width: 768px;
+    margin: auto;
+    text-align: right;
+}
