--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -51,7 +51,7 @@ color: #42b983;
     margin: auto;
 }
 .header ul li img{
-    width: 80%;
+    /* width: 80%; */
     vertical-align: middle;
 }
 
