footer props 추가, size fix 추가

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -66,8 +66,9 @@
 .loginTop p{text-align: center; color:#747f89; font-size:14px;}
 
 
-.focusOn {
-    color : #404750 !important;
+.focusOn p{
+    color : #167af9 !important;
+    font-weight: 500;
 }
 
 .login .el-button {
