--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -49,6 +49,7 @@ color: #42b983;
     width: 100%;
     max-width: 768px;
     margin: auto;
+    border-bottom:1px solid #dadae1;
 }
 .header ul li img{
     /* width: 80%; */
