--- a/src/assets/css/elementui.css
+++ b/src/assets/css/elementui.css
@@ -1,4 +1,5 @@
   .el-row {
+    font-family: "Noto Sans KR", sans-serif !important;
     margin-bottom: 20px;
   }
   .el-row:nth-child() {
@@ -25,3 +26,6 @@
     background-color: #f9fafc;
   }
 
+  .el-input--suffix .el-input__inner {
+    font-family: "Noto Sans KR", sans-serif !important;
+  }
