--- a/src/assets/css/product_account.css
+++ b/src/assets/css/product_account.css
@@ -1,3 +1,7 @@
+.productAccount .header ul li:nth-child(1) img {
+    padding-left:10px;
+}
+
 .productAccount section:nth-child(1) { 
     padding-bottom: 10px;
     border-bottom: 7px solid #eceff5;
