--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -49,7 +49,7 @@ color: #42b983;
     width: 100%;
     max-width: 768px;
     margin: auto;
-    border-bottom:1px solid #dadae1;
+    /* border-bottom:1px solid #dadae1; */
 }
 .header ul li img{
     /* width: 80%; */
@@ -75,6 +75,8 @@ color: #42b983;
 
 .footer ul {
     display: flex;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     box-shadow: 0px -1px 6px 0px rgba(0,0,0,0.25);
     width: 100%;
     background-color: white;
